--- a/ProyectoJuBa/src/Formularios/frmPrincipal.form
+++ b/ProyectoJuBa/src/Formularios/frmPrincipal.form
@@ -2,6 +2,24 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
+    <Container class="javax.swing.JMenuBar" name="jMenuBar2">
+
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
+        <Property name="useNullLayout" type="boolean" value="true"/>
+      </Layout>
+      <SubComponents>
+        <Menu class="javax.swing.JMenu" name="jMenu1">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="File"/>
+          </Properties>
+        </Menu>
+        <Menu class="javax.swing.JMenu" name="jMenu2">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Edit"/>
+          </Properties>
+        </Menu>
+      </SubComponents>
+    </Container>
     <Menu class="javax.swing.JMenuBar" name="jMenuBar1">
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="mArchivo">
@@ -32,6 +50,11 @@
         <Menu class="javax.swing.JMenu" name="mProcesos">
           <Properties>
             <Property name="text" type="java.lang.String" value="Procesos"/>
+          </Properties>
+        </Menu>
+        <Menu class="javax.swing.JMenu" name="mTablero">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Tablero"/>
           </Properties>
         </Menu>
         <Menu class="javax.swing.JMenu" name="mAyuda">
